<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">
            <ImageView
                android:id="@+id/img_item_photo"
                android:layout_width="100dp"
                android:layout_height="110dp"
                android:scaleType="fitXY"
                android:layout_marginBottom="4dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/activity_vertical_margin">
                <TextView
                    style="@style/TextContent.Black"
                    android:id="@+id/tv_item_name"
                    android:text="@string/name"
                    android:textSize="18sp"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/tv_view_anime"
                    style="@style/TextContent.Small"
                    android:text="1999"
                    android:textSize="14sp"/>
            </LinearLayout>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#bbb"/>
        <TextView
            style="@style/TextContent.Black"
            android:text="@string/diskripsi"
            android:textStyle="bold"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:lineSpacingMultiplier="1"/>
        <TextView
            style="@style/TextContent"
            android:id="@+id/tv_deskripsi"
            android:text="@string/content_text"
            android:lineSpacingMultiplier="1.5"/>
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">
                <TextView
                    style="@style/TextSpec.Field"
                    android:text="@string/rating"/>
                <TextView
                    style="@style/TextSpec.Value"
                    android:text="@string/nilai_rating"/>
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">
                <TextView
                    style="@style/TextSpec.Field"
                    android:text="@string/total_episode"/>
                <TextView
                    android:id="@+id/tv_episode"
                    style="@style/TextSpec.Value"
                    android:text="@string/jumlah_episode"/>
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">
                <TextView
                    style="@style/TextSpec.Field"
                    android:text="@string/status"/>
                <TextView
                    style="@style/TextSpec.Value"
                    android:text="@string/status_anime"/>
            </TableRow>
        </TableLayout>
    </LinearLayout>
</ScrollView>