<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_marginTop="4dp"
    android:layout_marginBottom="4dp"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    card_view:cardCornerRadius="4dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:padding="8dp">
        <ImageView
            android:id="@+id/img_item_photo"
            android:layout_width="154dp"
            android:layout_height="200dp"
            android:scaleType="fitXY"
            android:layout_marginBottom="4dp" />
        <TextView
            android:id="@+id/tv_item_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_toEndOf="@id/img_item_photo"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp"/>
        <TextView
            android:id="@+id/tv_item_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/category"
            android:layout_below="@id/tv_item_name"
            android:layout_toEndOf="@id/img_item_photo"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="16dp"
            android:layout_toEndOf="@id/img_item_photo"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btn_set_share"
                style="@style/ButtonGeneral"
                android:text="@string/share"/>
            <Button
                android:id="@+id/btn_set_detail"
                style="@style/ButtonGeneral"
                android:text="@string/detail"/>
        </LinearLayout>
    </RelativeLayout>

</android.support.v7.widget.CardView>